<resources>
    <string name="app_name">Al Quran</string>
    <string name="read_quran">Baca Al Quran</string>
    <string name="search_surah">Cari Surat</string>
    <string name="favorite">Favorit</string>
    <string name="settings">Pengaturan</string>
    <string name="al_quran">Love Al Qur\'an</string>
    <string name="surah_list">Daftar Surat</string>
    <string name="something_went_wrong">Terjadi kesalahan</string>
    <string name="alfatihah">Al Fatihah</string>
    <string name="number_of_juz">30 Juz</string>
    <string name="number_of_surah">114 Surat</string>
    <string name="come_read_quran">Mari Membaca Al Quran</string>
    <string name="instruction">Masukkan kata kunci yang mendekati nama surat yang ingin dicari, contoh: ketik kata kunci \'Al Fa\', \'Mu\', \'Rohman\'.</string>
    <string name="keyword">Ketik kata kunci</string>
    <string name="empty_search">Tidak ada surat yang sesuai</string>
    <string name="add_favorite">Tambah ke Favorite</string>
    <string name="title_favorite">favorite</string>
    <string name="message_add_favorite">Surat ditambahkan ke daftar favorit</string>
    <string name="message_remove_favorite">Surat dihapus dari daftar favorit</string>
</resources>